fixed eye icon for group visibility

--- a/web/client/components/TOC/fragments/css/grouptitle.css
+++ b/web/client/components/TOC/fragments/css/grouptitle.css
@@ -3,3 +3,9 @@
     padding: 4px;
     borderRadius: 4px;
 }
+.toc-default-group .visibility-check{
+    float: left;
+    margin-right: 2px;
+    margin-top: 5px;
+    margin-left: 2px;
+}
